--- a/lib/patchwork/Makefile.am
+++ b/lib/patchwork/Makefile.am
@@ -15,6 +15,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/fdpgen \
 	-I$(top_srcdir)/lib/pack \
 	-I$(top_srcdir)/lib/pathplan \
+	-I$(top_srcdir)/lib/sparse \
 	-I$(top_srcdir)/lib/$(GRAPH) \
 	-I$(top_srcdir)/lib/cdt
 
