--- a/plugin/neato_layout/Makefile.am
+++ b/plugin/neato_layout/Makefile.am
@@ -32,6 +32,7 @@ libgvplugin_neato_layout_C_la_LIBADD = \
 	$(top_builddir)/lib/twopigen/libtwopigen_C.la \
 	$(top_builddir)/lib/patchwork/libpatchwork_C.la \
 	$(top_builddir)/lib/fdpgen/libfdpgen_C.la \
+	$(top_builddir)/lib/sparse/libsparse_C.la \
 	$(top_builddir)/lib/circogen/libcircogen_C.la
 
 libgvplugin_neato_layout_la_LDFLAGS = -version-info $(GVPLUGIN_VERSION_INFO)
