this is supposed to fix mingw builds - seems to be ok on linux

--- a/lib/pathplan/Makefile.am
+++ b/lib/pathplan/Makefile.am
@@ -4,6 +4,10 @@
 pdfdir = $(pkgdatadir)/doc/pdf
 pkgconfigdir = $(libdir)/pkgconfig
 
+if WITH_WIN32
+AM_CPPFLAGS = -O0
+endif
+
 pkginclude_HEADERS = pathgeom.h pathplan.h
 noinst_HEADERS = pathutil.h solvers.h tri.h vis.h vispath.h
 
