--- a/lib/pack/Makefile.am
+++ b/lib/pack/Makefile.am
@@ -19,7 +19,7 @@ AM_CPPFLAGS = -I$(top_srcdir) \
 	-I$(top_srcdir)/lib/cdt
 
 if WITH_WIN32
-AM_CFLAGS = -D_BLD_common=1
+AM_CFLAGS = -D_BLD_gvc=1
 endif
 
 pkginclude_HEADERS = pack.h
