remove deleted RELEASE file from distributions

--- a/lib/expr/Makefile.am
+++ b/lib/expr/Makefile.am
@@ -69,7 +69,7 @@ y.output: $(top_srcdir)/lib/expr/exparse.y
 expr.3.pdf: $(srcdir)/expr.3
 	- @GROFF@ -Tps -man $(srcdir)/expr.3 | @PS2PDF@ - - >expr.3.pdf
 
-EXTRA_DIST = $(man_MANS) $(pdf_DATA) RELEASE \
+EXTRA_DIST = $(man_MANS) $(pdf_DATA) \
 	Makefile.nmake Makefile.orig Makefile.old \
 	exparse.c exparse.h exop.h \
 	y.tab.c y.tab.h y.output
