--- a/cmd/tools/Makefile.am
+++ b/cmd/tools/Makefile.am
@@ -169,7 +169,12 @@ gvgen_LDADD = \
 gvgen.1.pdf: $(srcdir)/gvgen.1
 	- @GROFF@ -Tps -man $(srcdir)/gvgen.1 | @PS2PDF@ - - >gvgen.1.pdf
 
-EXTRA_DIST = $(man_MANS) $(pdf_DATA) Makefile.old
+EXTRA_DIST = $(man_MANS) $(pdf_DATA) Makefile.old bcomps.vcproj \
+		acyclic.vcproj bcomps.vcproj ccomps.vcproj dijkstra.vcproj \
+		gc.vcproj gv2gxl.vcproj gvcolor.vcproj gvgen.vcproj gvpack.vcproj \
+		gxl2gv.vcproj mm2gv.vcproj nop.vcproj sccmap.vcproj tred.vcproj \
+		unflatten.vcproj 
+		
 
 CLEANFILES = stamp.h
 
