--- a/lib/fdpgen/Makefile.am
+++ b/lib/fdpgen/Makefile.am
@@ -25,4 +25,4 @@ noinst_LTLIBRARIES = libfdpgen_C.la
 libfdpgen_C_la_SOURCES = comp.c dbg.c grid.c fdpinit.c layout.c \
 	tlayout.c xlayout.c clusteredges.c
 
-EXTRA_DIST = Makefile.old
+EXTRA_DIST = Makefile.old gvfdpgen.vcproj
