visual studio project files are added to make.am files

--- a/lib/circogen/Makefile.am
+++ b/lib/circogen/Makefile.am
@@ -29,4 +29,4 @@ libcircogen_C_la_SOURCES = circularinit.c nodelist.c block.c edgelist.c \
 	stack.c circular.c deglist.c blocktree.c blockpath.c \
 	circpos.c nodeset.c
 
-EXTRA_DIST = Makefile.old
+EXTRA_DIST = Makefile.old gvcircogen.vcproj
