visual studio project files are added to make.am files

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,7 +35,7 @@ EXTRA_DIST = $(txt) $(html) graphviz.spec.in graphviz.spec \
 	graphviz.7 Doxyfile.in Doxyfile makearch features awk \
 	config/config_perl.pl config/config_python.py \
 	config/config_ruby.rb config/config_tcl.tcl dot.demo \
-	macosx windows debian
+	macosx windows debian graphviz.vcproj graphviz.sln
 
 .PHONY: rpm
 rpm: dist
