--- a/lib/twopigen/Makefile.am
+++ b/lib/twopigen/Makefile.am
@@ -23,4 +23,4 @@ noinst_LTLIBRARIES = libtwopigen_C.la
 
 libtwopigen_C_la_SOURCES = twopiinit.c circle.c
 
-EXTRA_DIST = Makefile.old
+EXTRA_DIST = Makefile.old gvtwopigen.vcproj
