visual studio project files are added to make.am files

--- a/cmd/dotty/Makefile.am
+++ b/cmd/dotty/Makefile.am
@@ -31,6 +31,6 @@ dotty.1.pdf: $(srcdir)/dotty.1
 
 EXTRA_DIST = $(lefty_DATA) $(man) $(pdf) \
 	dotty.bsh dotty.ksh dotty.sh \
-	Makefile.old notes mswin32
+	Makefile.old notes mswin32 dotty.vcproj
 
 DISTCLEANFILES = $(pdf) dotty
