fix autoreconf complaint: "plugin/quartz/Makefile.am:34: linker flags such as `-framework' belong in `libgvplugin_quartz_la_LDFLAGS"

--- a/plugin/quartz/Makefile.am
+++ b/plugin/quartz/Makefile.am
@@ -29,9 +29,9 @@ libgvplugin_quartz_C_la_SOURCES = \
 	gvtextlayout_quartz.c \
 	GVTextLayout.m
 
-libgvplugin_quartz_la_LDFLAGS = -version-info @GVPLUGIN_VERSION_INFO@
+libgvplugin_quartz_la_LDFLAGS = -version-info @GVPLUGIN_VERSION_INFO@ -framework CoreFoundation
 libgvplugin_quartz_la_SOURCES = $(libgvplugin_quartz_C_la_SOURCES)
-libgvplugin_quartz_la_LIBADD = @QUARTZ_LIBS@ -framework CoreFoundation
+libgvplugin_quartz_la_LIBADD = @QUARTZ_LIBS@
 
 if WITH_WIN32
 libgvplugin_quartz_la_LDFLAGS += -no-undefined
