--- a/dot.demo/dot_demo.vcproj
+++ b/dot.demo/dot_demo.vcproj
@@ -48,6 +48,7 @@
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
+				CompileAs="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -60,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="graph.lib graph.lib gvc.lib ingraphs.lib"
+				AdditionalDependencies="graph.lib gvc.lib ingraphs.lib"
 				OutputFile="c:/graphviz-ms/bin/$(ProjectName).exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="C:\gtk\lib;&quot;C:\graphviz-ms\bin&quot;"
@@ -192,7 +193,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\demo.c"
+				RelativePath=".\cpptester.cpp"
 				>
 			</File>
 		</Filter>
