- no more username in output. - creator always "graphviz" - pass in lt_preload_symbols from code using libgvc - avoiding problems with --enable-static - clean out various bits of dead code

--- a/lib/gvc/Makefile.am
+++ b/lib/gvc/Makefile.am
@@ -29,11 +29,11 @@ LIBS = $(LIBLTDL) $(SOCKET_LIBS) $(Z_LIBS) $(MATH_LIBS)
 pkginclude_HEADERS = gvc.h gvcext.h gvplugin.h gvcjob.h \
 	gvcommon.h gvplugin_render.h gvplugin_layout.h gvconfig.h \
 	gvplugin_textlayout.h gvplugin_device.h gvplugin_loadimage.h \
-	dot_builtins.c demand_loading.c no_demand_loading.c
+	demand_loading.c no_demand_loading.c
 noinst_HEADERS = gvcint.h gvcproc.h gvio.h
 noinst_LTLIBRARIES = libgvc_C.la
-lib_LTLIBRARIES = libgvc.la libgvc_builtins.la
-pkgconfig_DATA = libgvc.pc libgvc_builtins.pc
+lib_LTLIBRARIES = libgvc.la
+pkgconfig_DATA = libgvc.pc
 man_MANS = gvc.3
 pdf_DATA = gvc.3.pdf
 
@@ -50,26 +50,15 @@ if WITH_ORTHO
 libgvc_C_la_LIBADD += $(top_builddir)/lib/ortho/libortho_C.la
 libgvc_C_la_DEPENDENCIES +=  $(top_builddir)/lib/ortho/libortho_C.la
 endif
-#For use with plugins.
-#   so it is linked with an empty table of builtins.
+
 libgvc_la_LDFLAGS = -version-info $(VERSION_INFO) -no-undefined
-libgvc_la_SOURCES = $(libgvc_C_la_SOURCES) no_builtins.c demand_loading.c
+libgvc_la_SOURCES = $(libgvc_C_la_SOURCES) demand_loading.c
 libgvc_la_LIBADD = $(libgvc_C_la_LIBADD) \
 	$(top_builddir)/lib/cdt/libcdt.la \
 	$(top_builddir)/lib/$(GRAPH)/lib$(GRAPH).la \
 	$(top_builddir)/lib/pathplan/libpathplan.la \
 	$(EXPAT_LIBS) $(Z_LIBS) $(MATH_LIBS)
 libgvc_la_DEPENDENCIES = $(libgvc_C_la_DEPENDENCIES)
-
-#For use without plugins.
-#  so it needs to be linked with a preset table of builtins, e.g. dot_builtins.c,
-#  		with either demand_loading.c or no_demand_loading.c,
-#  		and with the plugins themselves, e.g.
-#  -lgvplugin_dot_layout -lgvplugin_neato_layout -lgvplugin_gd -lgvplugin_pangocairo
-libgvc_builtins_la_LDFLAGS = -version-info $(VERSION_INFO)
-libgvc_builtins_la_SOURCES = $(libgvc_C_la_SOURCES)
-libgvc_builtins_la_LIBADD = $(libgvc_la_LIBADD)
-libgvc_builtins_la_DEPENDENCIES = $(libgvc_la_DEPENDENCIES)
 
 gvc.3.pdf: $(srcdir)/gvc.3
 	- @GROFF@ -Tps -man $(srcdir)/gvc.3 | @PS2PDF@ - - > gvc.3.pdf
