attempt to fix strange issue where build fails to pick up libgvc version bump

--- a/tclpkg/tcldot/Makefile.am
+++ b/tclpkg/tcldot/Makefile.am
@@ -50,6 +50,8 @@ libtcldot_la_LIBADD = $(top_builddir)/tclpkg/tclhandle/libtclhandle_C.la \
 	$(top_builddir)/tclpkg/tclstubs/libtclstubs_C.la \
 	$(top_builddir)/lib/gvc/libgvc.la 
 
+libtcldot_la_DEPENDENCIES =  $(top_builddir)/lib/gvc/libgvc.la
+
 # GDTCLFT requires gd libs to be builtin
 if WITH_LIBGD
 if WITH_MYLIBGD
